# tp__

./: README.md
task0/: README.md
task1/: run.sh
task2/: CMakeList.txt  CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeList.txt  CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp  testing.cpp
task3/: CMakeLists.txt  main_second.cpp
task3/src/: CMakeLists.txt
task4/: CMakeLists.txt
task4/C/: CMakeLists.txt  main.cpp  main_test.cpp  tests.cpp
task4/tests/: CMakeLists.txt
task4/tests/00-aplusb/: CMakeLists.txt  test.cpp
task4/tests/01-simple-library/: AddTestCase.h  LeapTestCase.h
task4/tests/02-tree/: CMakeLists.txt  TreeTestCase.h
task4/tests/03-weather/: CMakeLists.txt  WeatherMock.h  WeatherTestCase.h
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: config.py  test_weather.py
task5/cmake-with-flask/: .Dockerfile.swp  Dockerfile
