cmake_minimum_required(VERSION 3.2)

set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")

project(Task4)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/bin)


add_subdirectory(B)
add_subdirectory(C)
add_subdirectory(${CMAKE_BINARY_DIR}/../$ENV{GOOGLE_TEST_DIR})


install(
    TARGETS C ClassLib
    RUNTIME DESTINATION exe/bin
    LIBRARY DESTINATION exe/lib
)

